--- a/settings/internal/com.kms.katalon.composer.testcase.properties
+++ b/settings/internal/com.kms.katalon.composer.testcase.properties
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
+<<<<<<<=HEAD
 testCaseTag=""
-=======
-testCaseTag=""
->>>>>>> branch 'main' of https://github.com/SefaB/MAF_Automation
+=\=\=\=\=\=\=
+>>>>>>>=branch 'main' of https\://github.com/SefaB/MAF_Automation
